Composer: Block format change from UL/OL can split BODY
For the test case, paste this sample text into gedit, and then paste that text from gedit into the Evolution 3.38.1 HTML email composer:
Check this out:
https://www.reddit.com/r/SemiHydro/comments/ist71n/my_snake_plant_is_loving_the_leca_life_looks_like/
https://www.reddit.com/r/SemiHydro/comments/hqhehc/anyone_have_a_snake_plant_in_semi_hydro/
No reference websites anywhere talk about this.
Sharing that in case you find that interesting for yourself.
Other finds on that subject:
https://www.reddit.com/r/SemiHydro/comments/j8qrmi/questions_and_concerns_for_a_newbie_in/
https://www.easygrohydro.com/repotting-houseplants-to-hydroponics-lets-transplant.html
https://www.reddit.com/r/SemiHydro/comments/ixaodv/semihydro_pros_and_cons_other_advice_for_someone/ has this intriguing quote in one of the comments: "One of the most common misconceptions i hear all the time are that certain plants like to get "dry" before the next watering, this is just absolutely not based in any reality or else how would a hydroponic system even work? i have found leca to basically be a cheat code that gives plants constant moisture and gives the roots air, its like the dream for a soil substrate which is why sometimes people use things like air pots. But why overcomplicate things tying to get a soil mixture to be perfect when you could just use leca?"
Thoughts?
Then play around with the bulleted lists as shown in this video (I don't even understand what triggers this specifically, but I was able to reproduce it twice in a row by following the same steps as in my video):
Edited by Milan Crha