I#1214 - Composer: Block format change from UL/OL can split BODY

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1214